vue material aplied

--- a/feed.html
+++ b/feed.html
@@ -15,127 +15,101 @@
 
     <template>
         <header>
-            <div id="vue-menu">
-            <md-menu>
-            <md-menu md-size="medium" md-align-trigger>
-                <md-button md-menu-trigger>Align with trigger</md-button>
-
-                <md-menu-content>
-                    <md-menu-item>My Item 1</md-menu-item>
-                    <md-menu-item>My Item 2</md-menu-item>
-                    <md-menu-item>My Item 3</md-menu-item>
-                </md-menu-content>
-            </md-menu>
-
-
-                <md-menu md-size="medium" md-align-trigger>
-                    <md-button md-menu-trigger>Align with trigger</md-button>
-
-                    <md-menu-content>
-                        <md-menu-item>My Item 1</md-menu-item>
-                        <md-menu-item>My Item 2</md-menu-item>
-                        <md-menu-item>My Item 3</md-menu-item>
-                    </md-menu-content>
-                </md-menu>
-
-                <md-menu md-size="medium" md-align-trigger>
-                    <md-button md-menu-trigger>Align with trigger</md-button>
-
-                    <md-menu-content>
-                        <md-menu-item>My Item 1</md-menu-item>
-                        <md-menu-item>My Item 2</md-menu-item>
-                        <md-menu-item>My Item 3</md-menu-item>
-                    </md-menu-content>
-                </md-menu>
-                <md-menu md-size="medium" md-align-trigger>
-                    <md-button md-menu-trigger>Align with trigger</md-button>
-
-                    <md-menu-content>
-                        <md-menu-item>My Item 1</md-menu-item>
-                        <md-menu-item>My Item 2</md-menu-item>
-                        <md-menu-item>My Item 3</md-menu-item>
-                    </md-menu-content>
-                </md-menu>
-
-                <md-menu md-size="medium" md-align-trigger>
-                    <md-button md-menu-trigger>Align with trigger</md-button>
-
-                    <md-menu-content>
-                        <md-menu-item>My Item 1</md-menu-item>
-                        <md-menu-item>My Item 2</md-menu-item>
-                        <md-menu-item>My Item 3</md-menu-item>
-                    </md-menu-content>
-                </md-menu>
-
-
-
-            </md-menu>
-            </div>
             <nav class="menu">
                 <div id="nav-bar">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#">Feed</a>
-                            </li>
-                            <li>
-                                <a href="#">Noticiário</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Parcerias</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#">UFSC</a>
-                            </li>
-                            <li>
-                                <a href="#">DCE</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Eventos</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#">Próximos</a>
-                            </li>
-                            <li>
-                                <a href="#">Histórico</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Calendário</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#">Esportivo</a>
-                            </li>
-                            <li>
-                                <a href="#">Recreativo</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Cadastro</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#">Atleta</a>
-                            </li>
-                            <li>
-                                <a href="#">Simpatizante</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+                    <div id="logo"><img src="atletica_logo.png"></div>
+                    <p id="title">Associação Atlética das Licenciaturas</p>
+                    <div id="vue-menu">
+                <md-menu>
+                <md-menu md-size="medium" md-align-trigger>
+                    <md-button md-menu-trigger>Home</md-button>
+
+                    <md-menu-content>
+                        <md-menu-item>Feed</md-menu-item>
+                        <md-menu-item>Noticiário</md-menu-item>
+                    </md-menu-content>
+                </md-menu>
+
+
+                    <md-menu md-size="medium" md-align-trigger>
+                        <md-button md-menu-trigger>Parcerias</md-button>
+
+                        <md-menu-content>
+                            <md-menu-item>UFSC</md-menu-item>
+                            <md-menu-item>DCE</md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+
+                    <md-menu md-size="medium" md-align-trigger>
+                        <md-button md-menu-trigger>Eventos</md-button>
+
+                        <md-menu-content>
+                            <md-menu-item>Próximos</md-menu-item>
+                            <md-menu-item>Histórico</md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+                    <md-menu md-size="medium" md-align-trigger>
+                        <md-button md-menu-trigger>Calendário</md-button>
+
+                        <md-menu-content>
+                            <md-menu-item>Esportivo</md-menu-item>
+                            <md-menu-item>Recreativo</md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+
+                    <md-menu md-size="medium" md-align-trigger>
+                            <md-button md-menu-trigger>Cadastro</md-button>
+
+                        <md-menu-content>
+                            <md-menu-item>Atleta</md-menu-item>
+                            <md-menu-item>Torcedor</md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+
+
+
+                </md-menu>
+                </div>
+                </div>
             </nav>
 
         </header>
         <section>
-<br><br><br><br><br><br><br><br><br><br>    <br><br><br><br><br><br><br><br><br><br><br><br>
+            <p style="margin-left: 10%">Home > <span style="color:red">Feed</span></p>
+            <h1>Feed</h1>
+
+            <div class="md-card">
+            <md-card md-with-hover>
+                <md-ripple>
+                    <md-card-header>
+                        <div class="md-title">Expeculações</div>
+                        <div class="md-subhead">Especulações acerca do próximo ano</div>
+                    </md-card-header>
+
+                    <md-card-content>
+                        Estamos otimistas com o que nos aguarda
+                        para o próximo ano, já que os resultados
+                        desta temporada foram satisfatórios, apesar
+                        de não pudermos contar com nosso principal
+                        jogador, e capitão da equipe Giulio Giovanella.
+                        O mesmo acaba de se recuperar das lesões
+                        que o afastaram e já voltou aos treinos com a
+                        equipe.
+                    </md-card-content>
+
+                    <md-card-actions>
+                        <md-button>Omitir</md-button>
+                        <md-button>Saiba mais</md-button>
+                    </md-card-actions>
+                </md-ripple>
+            </md-card>
+            </div>
+
+
+
+
+
+
         </section>
         <footer>
             <p><span id="footer-tag">@ 2019 Copyright:</span><span id="footer-name">Giulio Giovanella</span></p>
@@ -163,20 +137,49 @@
 <script src="https://unpkg.com/vue"></script>
 <script src="https://unpkg.com/vue-material@beta"></script>
 <style>
+    /*Section*/
+    .md-card{
+        padding-top: 2%;
+        margin-left: 20%;
+        width: 60%;
+    }
+    h1{
+        text-align: center;
+        font-size: 20pt;
+    }
+    section{
+        background-color: white;
+    }
     /*MENU*/
+    #logo{
+        width: 3.8%;
+        position: absolute;
+    }
+    #title{
+        width: 30%;
+        margin-left: 9%;
+        position: absolute;
+        font-size: 15pt;
+        margin-top: 1%;
+        color:white;
+    }
     #vue-menu{
         background-color: blue;
-        width: 62%;
-        margin-left: 25%;
+        width: 39%;
+        margin-left: 58%;
+        padding-top: .5%;
     }
     #nav-bar{
-        display: none;
-        margin-top: -1.06%;
+        /*display: none;*/
+        margin-top: 0%;
         width: 100%;
         height: 8.5%;
         background-color: blue;
-        position: absolute;
+        position: relative;
+        padding-bottom: .5%;
+
     }
+    /*
     .menu ul{
         padding: 0px;
         margin-right: 0px;
@@ -204,7 +207,8 @@
     }
     .menu ul li:hover > ul{
         display: block;
-    }
+    }*/
+
     /*END MENU*/
 
     #footer-tag{
@@ -217,6 +221,7 @@
         background-color: blue;
         text-align: center;
         padding: .05%;
+        margin-bottom: 0%;
     }
 </style>
 <script>
