--- a/feed.html
+++ b/feed.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
     <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/vue-material.min.css">
     <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default.css">
+    <link rel="stylesheet" href="feed.css">
     <title>AAALF</title>
 </head>
 
@@ -20,55 +21,55 @@
                     <div id="logo"><img src="atletica_logo.png"></div>
                     <p id="title">Associação Atlética das Licenciaturas</p>
                     <div id="vue-menu">
-                <md-menu>
-                <md-menu md-size="medium" md-align-trigger>
-                    <md-button md-menu-trigger>Home</md-button>
+                        <md-menu>
+                            <md-menu md-size="medium" md-align-trigger>
+                                <md-button md-menu-trigger>Home</md-button>
 
-                    <md-menu-content>
-                        <md-menu-item>Feed</md-menu-item>
-                        <md-menu-item>Noticiário</md-menu-item>
-                    </md-menu-content>
-                </md-menu>
-
-
-                    <md-menu md-size="medium" md-align-trigger>
-                        <md-button md-menu-trigger>Parcerias</md-button>
-
-                        <md-menu-content>
-                            <md-menu-item>UFSC</md-menu-item>
-                            <md-menu-item>DCE</md-menu-item>
-                        </md-menu-content>
-                    </md-menu>
-
-                    <md-menu md-size="medium" md-align-trigger>
-                        <md-button md-menu-trigger>Eventos</md-button>
-
-                        <md-menu-content>
-                            <md-menu-item>Próximos</md-menu-item>
-                            <md-menu-item>Histórico</md-menu-item>
-                        </md-menu-content>
-                    </md-menu>
-                    <md-menu md-size="medium" md-align-trigger>
-                        <md-button md-menu-trigger>Calendário</md-button>
-
-                        <md-menu-content>
-                            <md-menu-item>Esportivo</md-menu-item>
-                            <md-menu-item>Recreativo</md-menu-item>
-                        </md-menu-content>
-                    </md-menu>
-
-                    <md-menu md-size="medium" md-align-trigger>
-                            <md-button md-menu-trigger>Cadastro</md-button>
-
-                        <md-menu-content>
-                            <md-menu-item>Atleta</md-menu-item>
-                            <md-menu-item>Torcedor</md-menu-item>
-                        </md-menu-content>
-                    </md-menu>
+                                <md-menu-content>
+                                    <md-menu-item>Feed</md-menu-item>
+                                    <md-menu-item>Noticiário</md-menu-item>
+                                </md-menu-content>
+                            </md-menu>
 
 
+                                <md-menu md-size="medium" md-align-trigger>
+                                    <md-button md-menu-trigger>Parcerias</md-button>
 
-                </md-menu>
+                                    <md-menu-content>
+                                        <md-menu-item>UFSC</md-menu-item>
+                                        <md-menu-item>DCE</md-menu-item>
+                                    </md-menu-content>
+                                </md-menu>
+
+                                <md-menu md-size="medium" md-align-trigger>
+                                    <md-button md-menu-trigger>Eventos</md-button>
+
+                                    <md-menu-content>
+                                        <md-menu-item>Próximos</md-menu-item>
+                                        <md-menu-item>Histórico</md-menu-item>
+                                    </md-menu-content>
+                                </md-menu>
+                                <md-menu md-size="medium" md-align-trigger>
+                                    <md-button md-menu-trigger>Calendário</md-button>
+
+                                    <md-menu-content>
+                                        <md-menu-item>Esportivo</md-menu-item>
+                                        <md-menu-item>Recreativo</md-menu-item>
+                                    </md-menu-content>
+                                </md-menu>
+
+                                <md-menu md-size="medium" md-align-trigger>
+                                        <md-button md-menu-trigger>Cadastro</md-button>
+
+                                    <md-menu-content>
+                                        <md-menu-item>Atleta</md-menu-item>
+                                        <md-menu-item>Torcedor</md-menu-item>
+                                    </md-menu-content>
+                                </md-menu>
+
+
+
+                        </md-menu>
                 </div>
                 </div>
             </nav>
@@ -106,7 +107,53 @@
             </div>
 
 
+            <div id="cadastro">
+                <md-field>
+                    <label>Initial Value</label>
+                    <md-input v-model="initial"></md-input>
+                </md-field>
 
+                <md-field>
+                    <label>Initial Value (Read Only)</label>
+                    <md-input v-model="initial" readonly></md-input>
+                </md-field>
+
+                <md-field>
+                    <label>Type here!</label>
+                    <md-input v-model="type"></md-input>
+                    <span class="md-helper-text">Helper text</span>
+                </md-field>
+
+                <md-field>
+                    <label>With label</label>
+                    <md-input v-model="withLabel" placeholder="A nice placeholder"></md-input>
+                </md-field>
+
+                <md-field md-inline>
+                    <label>Inline</label>
+                    <md-input v-model="inline"></md-input>
+                </md-field>
+
+                <md-field>
+                    <label>Number</label>
+                    <md-input v-model="number" type="number"></md-input>
+                </md-field>
+
+                <md-field>
+                    <label>Textarea</label>
+                    <md-textarea v-model="textarea"></md-textarea>
+                </md-field>
+
+                <md-field>
+                    <label>Textarea with Autogrow</label>
+                    <md-textarea v-model="autogrow" md-autogrow></md-textarea>
+                </md-field>
+
+                <md-field>
+                    <label>Disabled</label>
+                    <md-input v-model="disabled" disabled></md-input>
+                </md-field>
+            </div>
 
 
 
@@ -137,92 +184,7 @@
 <script src="https://unpkg.com/vue"></script>
 <script src="https://unpkg.com/vue-material@beta"></script>
 <style>
-    /*Section*/
-    .md-card{
-        padding-top: 2%;
-        margin-left: 20%;
-        width: 60%;
-    }
-    h1{
-        text-align: center;
-        font-size: 20pt;
-    }
-    section{
-        background-color: white;
-    }
-    /*MENU*/
-    #logo{
-        width: 3.8%;
-        position: absolute;
-    }
-    #title{
-        width: 30%;
-        margin-left: 9%;
-        position: absolute;
-        font-size: 15pt;
-        margin-top: 1%;
-        color:white;
-    }
-    #vue-menu{
-        background-color: blue;
-        width: 39%;
-        margin-left: 58%;
-        padding-top: .5%;
-    }
-    #nav-bar{
-        /*display: none;*/
-        margin-top: 0%;
-        width: 100%;
-        height: 8.5%;
-        background-color: blue;
-        position: relative;
-        padding-bottom: .5%;
 
-    }
-    /*
-    .menu ul{
-        padding: 0px;
-        margin-right: 0px;
-        margin-left: 25%;
-        width: 70%;
-        background-color: blue;
-    }
-    .menu ul li{
-        background-color: blue;
-        color: white;
-        float: left;
-        width: 20%;
-        height: 160%;
-        display: inline-block;
-        text-align: center;
-        line-height: 160%;
-        font-size: 25px;
-
-    }
-    .menu ul li:hover{
-        background-color: aqua;
-    }
-    .menu ul ul{
-        display: none;
-    }
-    .menu ul li:hover > ul{
-        display: block;
-    }*/
-
-    /*END MENU*/
-
-    #footer-tag{
-        color: grey;
-    }
-    #footer-name{
-        color: white;
-    }
-    footer{
-        background-color: blue;
-        text-align: center;
-        padding: .05%;
-        margin-bottom: 0%;
-    }
 </style>
 <script>
     Vue.use(VueMaterial.default)
