fixed sign-up position

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
     <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/vue-material.min.css">
     <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default.css">
+    <link rel="stylesheet" href="index.css">
     <title>AAALF</title>
 </head>
 
@@ -76,63 +77,7 @@
     var usarmane = document.querySelector('')
 </script>
 <style>
-    .center-webkit{
-        width: -webkit-fill-available;
-        height: -webkit-fill-available;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-    form{
-        width: 29%;
-    }
-    #logo{
-        text-align: center;
-    }
-    #title{
-        text-align: center;
-    }
-    #forgot-password{
-        width: 38%;
-        margin-top: 4.5%;
-        float: right;
-        padding-right: 0%;
-        color: blue;
-    }
-    #forgot-password:hover{
-        color: blue;
-    }
-    #remember-me{
-        width: 40%;
-        float: left;
-        padding-top: 0%;
-    }
-    #log-in{
-        padding-top: 9%;
-        float: right;
-    }
-    #sign-up{
-        padding-top: 9%;
-        float: left;
-    }
-    #sign-up md-button{
-        background-color: white;
-    }
-    span{
-        color: red;
-    }
-    #footer-tag{
-        color: grey;
-    }
-    #footer-name{
-        color: white;
-    }
-    footer{
-        background-color: blue;
-        text-align: center;
-        padding: .05%;
-    }
+    
 </style>
 </body>
 </html>
